[package]
name = "hxml"
version = "0.2.1"
edition = "2021"
authors = ["Baehyunsol <baehyunsol@naver.com>"]
description = "XML Engine"
license = "MIT"
keywords = ["xml"]
repository = "https://github.com/baehyunsol/HXML"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]